<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.VehicleDriveTestActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/statusTxt"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:gravity="center_horizontal"
            android:maxLines="100"
            android:textAlignment="center"
            android:textSize="16sp"
            tools:text="Title text here" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/fareMeterSwt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="@dimen/margin_content"
            android:checked="true"
            android:text="Fare Meter Present"
            android:textOff="No"
            android:textOn="Yes" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tifareStartTxt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="@dimen/margin_content"
            android:hint="Current Fare Meter Reading (km)"
            tools:visibility="gone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fareStartTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/odoStartTxtInputLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="@dimen/margin_content"
            android:hint="@string/hint_current_odometer_reading">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/odoStartTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number|numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/spdLimitTxtInputLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="@dimen/margin_content"
            android:hint="@string/hint_speed_limiter_value"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/spdLimitTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/odoEndTxtInputLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="@dimen/margin_content"
            android:hint="@string/hint_current_odometer_reading"
            android:visibility="gone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/odoEndTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tifareEndTxt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="@dimen/margin_content"
            android:hint="Current Fare Meter Reading (km)">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fareEndTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/startTstBtn"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="@dimen/margin_content"
            android:text="@string/button_start_drive_test"
            android:textAlignment="center" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/brakingReadyBtn"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="@dimen/margin_content"
            android:text="@string/button_ready_to_brake"
            android:visibility="gone" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/pauseBrakingBtn"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="@dimen/margin_content"
            android:text="@string/button_pause_braking_test"
            android:visibility="gone" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/spdSetBtn"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="@dimen/margin_content"
            android:text="@string/button_speed_reached"
            android:textAlignment="center"
            android:visibility="gone" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/finishOdoEntryBtn"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="@dimen/margin_content"
            android:text="@string/button_finish"
            android:visibility="gone" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/rstBtn"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="@dimen/margin_content"
            android:text="@string/button_reset_sequence"
            android:textAlignment="center"
            android:visibility="gone" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>